--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "razorpay": "^2.9.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
     "react-player": "^2.16.0",
     "react-toastify": "^9.1.3"
   },
